--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,9 @@ version '1.0-SNAPSHOT'
 
 sourceCompatibility = 1.8
 
-ext{
-    springVersion = '5.1.0'
+ext {
+    springVersion = '5.1.0.RELEASE'
+    lombokVersion = '1.18.2'
 }
 
 repositories {
@@ -16,10 +17,20 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
     compile (
-            'org.springframework:spring-core:${springVersion}',
-            'org.springframework:spring-beans:${springVersion}',
-            'org.springframework:spring-context:${springVersion}'
+            "org.springframework:spring-core:${springVersion}",
+            "org.springframework:spring-beans:${springVersion}",
+            "org.springframework:spring-context:${springVersion}",
+            "org.projectlombok:lombok:${lombokVersion}"
     )
+}
+
+jar {
+    manifest {
+        attributes "Main-Class": "HorseRaceEmulatorApp"
+    }
+
+    from {
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+    }
 }
